package com.virtual.proxy;

import java.util.List;

/**
 * 12/set/2022
 * @author andrebronca
 */
public class ContactListProxyImpl implements ContactList{

    private ContactList contactList;
    
    @Override
    public List<Employee> getEmployeeList() {
        if (contactList == null){
            System.out.println("Creating contact list and fetching list of employees...");
            contactList = new ContactListImpl();
        }
        return contactList.getEmployeeList();
    }
    
}
